# exyte

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  README.md.parser  analyze_pdf_structure.py  analyze_table_extraction.py  docker-compose.yml  librechat.config.yaml  librechat.yaml  main.py  pyproject.toml  start.sh  test_camelot_direct.py  test_part_fix.py  test_table_extraction.py  validate_output.py  verify_phase1.py
diagrams/: LangGraph.excalidraw  Search.excalidraw  System_Architecture.excalidraw
parser/: test_table_detection.py
parser/output/: parsed_document.json
parser/src/: __init__.py  config.py  main.py  pipeline.py  pipeline_helpers.py  pipeline_pdf.py
parser/src/models/: __init__.py  document.py  references.py
parser/src/parsers/: __init__.py  figure_extractor.py  metadata_collector.py  pdf_extractor.py  pdf_filters.py  reference_extractor.py  (+3 more)
parser/tests/: __init__.py  test_pdf_extractor.py
rag/: config.py
rag/api/: __init__.py  models.py  server.py
rag/database/: 00-init-user.sql  __init__.py  connection.py  schema.sql
rag/graph/: __init__.py  answer_nodes.py  context_nodes.py  dependencies.py  nodes.py  query_nodes.py  state.py  workflow.py
rag/ingestion/: __init__.py  embedder.py  loader.py  pipeline.py  writer.py
rag/models/: __init__.py  ingestion.py
rag/retrieval/: __init__.py  context_builder.py  hybrid_search.py  reference_resolver.py  types.py  vector_search.py
rag/scripts/: ingest_document.py  run_graph_query.py  run_search.py  test_db_connection.py  validate_ingestion.py
rag/utils/: __init__.py  ranking.py  telemetry.py
(+19 files in other folders)
